--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
 }
 
 .nav {
+  top: 0;
   z-index: 100;
   position: fixed;
   height: 80px;
@@ -227,6 +228,7 @@ body {
   height: 100vh;
   width: 85vw;
   margin: 0 auto;
+  margin-top: 70px;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
