--- a/css/style.css
+++ b/css/style.css
@@ -255,11 +255,13 @@ body {
   background-color: rebeccapurple;
   color: ivory;
   cursor: pointer;
-  border-radius: 50px;
+  border-radius: 20px;
   border-style: dashed;
   line-height: 40px;
   margin-top: 10%;
   padding: 0 20px;
+  text-decoration: none;
+  padding: 0.35em;
 }
 .callto:hover,
 .callto:focus {
