--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,9 @@ body {
 }
 
 .nav > .nav-header {
-  display: inline;
+  display: inline-block;
+  min-height: 40px;
+  height: 9vh;
 }
 
 .nav > .nav-header > .nav-title {
@@ -70,6 +72,7 @@ body {
   color: #00121b;
   font-family: "Roboto", sans-serif;
   padding: 10px 10px 10px 10px;
+  height: 100%;
 }
 
 .nav > .nav-btn {
@@ -113,7 +116,7 @@ body {
   display: none;
 }
 
-@media (max-width: 690px) {
+@media (max-width: 650px) {
   .nav > .nav-btn {
     display: inline-block;
     position: absolute;
